# GitHubCodebaseChat

./: .replit  package-lock.json  package.json  pyproject.toml
.cursor/rules/: githubchatrules.mdc
Instructions/: Persist_URL.md
Instructions/PydanticAI/: agents.md  function_tools.md  models.md  multi-agent_applications.md
attached_assets/: Pasted-3-24-42-PM-express-serving-on-port-5000-3-24-44-PM-express-GET-api-messages-200-in-6ms-3-24-44--1739114762252.txt  Pasted-3-44-22-PM-express-POST-api-github-agent-500-in-7ms-error-Failed-to-reach-GitHub-agent-ser-1739115928461.txt
client/: package-lock.json  package.json
client/src/: index.css
client/src/pages/: chat.tsx
client/src/styles/: highlight.css  katex.css
server/: db.ts  github_agent.py  github_agent_endpoint.py  requirements.txt  routes.ts  storage.ts
server/github/: __init__.py  api.py  tools.py  types.py
shared/: schema.ts
